feat: Add refined Pacing Plan